Importing .obj files from Unreal! :D
Importing .obj files from Unreal! :D

--- a/AdamVulkanRenderer/AdamVulkanRenderer.vcxproj
+++ b/AdamVulkanRenderer/AdamVulkanRenderer.vcxproj
@@ -207,6 +207,9 @@
     <Object Include="box.obj">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
     </Object>
+    <Object Include="LevelCreationTutorial.obj">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
+    </Object>
     <Object Include="sword.obj">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
     </Object>
