--- a/AdamVulkanRenderer/AdamVulkanRenderer.vcxproj.filters
+++ b/AdamVulkanRenderer/AdamVulkanRenderer.vcxproj.filters
@@ -148,5 +148,8 @@
     <Object Include="sword_old.obj">
       <Filter>Resource Files</Filter>
     </Object>
+    <Object Include="LevelCreationTutorial.obj">
+      <Filter>Resource Files</Filter>
+    </Object>
   </ItemGroup>
 </Project>
