--- a/AdamVulkanRenderer/AdamVulkanRenderer.vcxproj.filters
+++ b/AdamVulkanRenderer/AdamVulkanRenderer.vcxproj.filters
@@ -84,6 +84,9 @@
     <ClInclude Include="Renderer.h">
       <Filter>Header Files\Simulation</Filter>
     </ClInclude>
+    <ClInclude Include="Texture.h">
+      <Filter>Header Files\Tools</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -105,6 +108,9 @@
       <Filter>Source Files\Tools</Filter>
     </ClCompile>
     <ClCompile Include="Shader.cpp">
+      <Filter>Source Files\Tools</Filter>
+    </ClCompile>
+    <ClCompile Include="Texture.cpp">
       <Filter>Source Files\Tools</Filter>
     </ClCompile>
   </ItemGroup>
@@ -149,6 +155,9 @@
       <Filter>Resource Files</Filter>
     </Object>
     <Object Include="LevelCreationTutorial.obj">
+      <Filter>Resource Files</Filter>
+    </Object>
+    <Object Include="murdock.obj">
       <Filter>Resource Files</Filter>
     </Object>
   </ItemGroup>
