Ignore texture.obj
Ignore texture.obj

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,4 @@ AdamVulkanRenderer/Debug/Mat4.obj
 AdamVulkanRenderer/Debug/OBJFile.obj
 AdamVulkanRenderer/Debug/Shader.obj
 AdamVulkanRenderer/Debug/Simulation.obj
+AdamVulkanRenderer/Debug/Texture.obj
