Initial setup for frustum subdivide
Initial setup for frustum subdivide

--- a/AdamVulkanRenderer/AdamVulkanRenderer.vcxproj
+++ b/AdamVulkanRenderer/AdamVulkanRenderer.vcxproj
@@ -159,7 +159,9 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AdamVulkanRenderer.h" />
+    <ClInclude Include="Camera.h" />
     <ClInclude Include="Cube.h" />
+    <ClInclude Include="Light.h" />
     <ClInclude Include="Manager.h" />
     <ClInclude Include="Mat4.h" />
     <ClInclude Include="Model.h" />
