Frustum subdivided! Some debug drawing. Need to get more lines in.
Frustum subdivided! Some debug drawing. Need to get more lines in.

--- a/AdamVulkanRenderer/AdamVulkanRenderer.vcxproj
+++ b/AdamVulkanRenderer/AdamVulkanRenderer.vcxproj
@@ -180,6 +180,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="AdamVulkanRenderer.cpp" />
+    <ClCompile Include="Camera.cpp" />
     <ClCompile Include="Mat4.cpp" />
     <ClCompile Include="OBJFile.cpp" />
     <ClCompile Include="Shader.cpp" />
