--- a/AdamVulkanRenderer/AdamVulkanRenderer.vcxproj.filters
+++ b/AdamVulkanRenderer/AdamVulkanRenderer.vcxproj.filters
@@ -122,6 +122,9 @@
     <ClCompile Include="Texture.cpp">
       <Filter>Source Files\Tools</Filter>
     </ClCompile>
+    <ClCompile Include="Camera.cpp">
+      <Filter>Source Files\Simulation</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="AdamVulkanRenderer.rc">
