--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,4 @@ AdamVulkanRenderer/Debug/Texture.obj
 *.pdb
 *.exe
 AdamVulkanRenderer/Debug/Camera.obj
+AdamVulkanRenderer/Debug/AdamVulkanRenderer.Build.CppClean.log
