--- a/AdamVulkanRenderer/AdamVulkanRenderer.vcxproj.filters
+++ b/AdamVulkanRenderer/AdamVulkanRenderer.vcxproj.filters
@@ -31,6 +31,9 @@
     <Filter Include="Header Files\Objects">
       <UniqueIdentifier>{410fbcf6-82ff-49a0-a38c-aa53def57d2c}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Header Files\Vulkan">
+      <UniqueIdentifier>{139dd8f5-0959-40f6-ba65-b8c709afe96f}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <Text Include="ReadMe.txt" />
@@ -44,9 +47,6 @@
     </ClInclude>
     <ClInclude Include="Resource.h">
       <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="VulkanInstance.h">
-      <Filter>Source Files\Vulkan</Filter>
     </ClInclude>
     <ClInclude Include="Cube.h">
       <Filter>Source Files\Vulkan</Filter>
@@ -83,6 +83,12 @@
     </ClInclude>
     <ClInclude Include="Light.h">
       <Filter>Header Files\Objects</Filter>
+    </ClInclude>
+    <ClInclude Include="VulkanInstance.h">
+      <Filter>Header Files\Vulkan</Filter>
+    </ClInclude>
+    <ClInclude Include="VulkanCommon.h">
+      <Filter>Header Files\Vulkan</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
