Hack for additional cameras
Hack for additional cameras and making sure obj import works. Yay!

Still a threading bug, but I cannot figure it out right now.

--- a/AdamVulkanRenderer/AdamVulkanRenderer.vcxproj
+++ b/AdamVulkanRenderer/AdamVulkanRenderer.vcxproj
@@ -206,7 +206,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="adam.ppm">
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">false</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
     </None>
     <None Include="fragment.fs">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
